--- a/js/tinymce/skins/lightgray/ComboBox.less
+++ b/js/tinymce/skins/lightgray/ComboBox.less
@@ -32,6 +32,7 @@
 .@{prefix}-combobox button {
 	padding-right: 8px;
 	padding-left: 8px;
+	padding-bottom: 12px;
 }
 
 .@{prefix}-combobox.@{prefix}-disabled .@{prefix}-btn button {
