--- a/js/tinymce/plugins/abbreviations/css/abbrpanel.css
+++ b/js/tinymce/plugins/abbreviations/css/abbrpanel.css
@@ -19,7 +19,13 @@
 }
 
 .mce-abbr-panel abbr{
-  padding-right:20px;
+  margin-right:10px;
   font-style: italic;
   font-weight: bold;
+  display:inline-block;
+  overflow-x:hidden;
+}
+
+abbr.selected {
+  background-color:yellow;
 }
